--- a/css/form.css
+++ b/css/form.css
@@ -16,7 +16,7 @@
 .form__button {
     text-align: center;
     font-size: 20px;
-    background-color: rgb(51, 132, 124);
+    background-color:teal;
     border: none;
     color: white;
     transition: 1s;
